// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentMethod desktop children 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal"
>
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      PaymentMethod
    </h4>
    Children
  </div>
</article>
`;

exports[`PaymentMethod desktop childrenAfter 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_vertical"
>
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      PaymentMethod
    </h4>
  </div>
  <i>
    СhildrenAfter
  </i>
</article>
`;

exports[`PaymentMethod desktop childrenBefore 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_vertical"
>
  <i>
    ChildrenBefore
  </i>
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      PaymentMethod
    </h4>
  </div>
</article>
`;

exports[`PaymentMethod desktop className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal Test"
>
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      MasterCard
    </h4>
  </div>
</article>
`;

exports[`PaymentMethod touch-phone children 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal"
>
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      PaymentMethod
    </h4>
    Children
  </div>
</article>
`;

exports[`PaymentMethod touch-phone childrenAfter 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_vertical"
>
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      PaymentMethod
    </h4>
  </div>
  <i>
    СhildrenAfter
  </i>
</article>
`;

exports[`PaymentMethod touch-phone childrenBefore 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_vertical"
>
  <i>
    ChildrenBefore
  </i>
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      PaymentMethod
    </h4>
  </div>
</article>
`;

exports[`PaymentMethod touch-phone className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal Test"
>
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      MasterCard
    </h4>
  </div>
</article>
`;
